Balancing the dataset and evaluation of the Neural Network completed. The results are really good.

--- a/Fall_Detection_System.ipynb
+++ b/Fall_Detection_System.ipynb
@@ -6,7 +6,7 @@
       "name": "Fall-Detection-System.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNki2Na905JdGjZ15Xhyq+t",
+      "authorship_tag": "ABX9TyPW8oHhIEjfNdgv8w3DcJ0S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "import os\n",
         "window_size = 200\n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -386,7 +386,7 @@
         "test_inputs = preprocessing.scale(npz[\"inputs\"].astype(np.float))\n",
         "test_targets = npz[\"targets\"].astype(np.int)"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -926,6 +926,311 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uomYoggjsnxh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f942563d-bdc4-4687-826b-25fda62086c2"
+      },
+      "source": [
+        "new_train_dataset = np.concatenate((train_inputs,train_targets.reshape((train_targets.shape[0],1))),axis=1)\n",
+        "df = pd.DataFrame(new_train_dataset, columns = None)\n",
+        "df.columns = [*df.columns[:-1], 'label']\n",
+        "reps = [305 if val == 1 else 1 for val in df.label]\n",
+        "df = df.loc[np.repeat(df.index.values, reps)].reset_index(drop=True)\n",
+        "Balanced_train = df.to_numpy()\n",
+        "print('Shape before Balancing :', new_train_dataset.shape)\n",
+        "print('Shape After Balancing:', Balanced_train.shape)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape before Balancing : (54543, 601)\n",
+            "Shape After Balancing: (832175, 601)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kZk2C4EDsnxi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d97c0727-3bea-415d-e78c-53e9b09e1e18"
+      },
+      "source": [
+        "input_size = 600\n",
+        "output_size = 1\n",
+        "hidden_layer_size = 50\n",
+        "\n",
+        "model = tf.keras.Sequential([\n",
+        "                             tf.keras.layers.Dense(input_size,activation=\"relu\"),\n",
+        "                             tf.keras.layers.Dense(hidden_layer_size, activation=\"relu\"),\n",
+        "                             tf.keras.layers.Dense(hidden_layer_size,activation=\"relu\"),\n",
+        "                             tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "batch_size = 100\n",
+        "max_epochs = 50\n",
+        "\n",
+        "model.fit(Balanced_train[:,:-1],\n",
+        "          Balanced_train[:,-1],\n",
+        "          batch_size=batch_size,\n",
+        "          epochs=max_epochs,\n",
+        "          shuffle = True,\n",
+        "          verbose = 1\n",
+        "          )"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/50\n",
+            "8322/8322 [==============================] - 64s 8ms/step - loss: 0.0498 - accuracy: 0.9842\n",
+            "Epoch 2/50\n",
+            "8322/8322 [==============================] - 62s 7ms/step - loss: 0.0269 - accuracy: 0.9925\n",
+            "Epoch 3/50\n",
+            "8322/8322 [==============================] - 64s 8ms/step - loss: 0.0197 - accuracy: 0.9949\n",
+            "Epoch 4/50\n",
+            "8322/8322 [==============================] - 65s 8ms/step - loss: 0.0157 - accuracy: 0.9961\n",
+            "Epoch 5/50\n",
+            "8322/8322 [==============================] - 67s 8ms/step - loss: 0.0127 - accuracy: 0.9968\n",
+            "Epoch 6/50\n",
+            "8322/8322 [==============================] - 61s 7ms/step - loss: 0.0112 - accuracy: 0.9973\n",
+            "Epoch 7/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0095 - accuracy: 0.9977\n",
+            "Epoch 8/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0085 - accuracy: 0.9980\n",
+            "Epoch 9/50\n",
+            "8322/8322 [==============================] - 57s 7ms/step - loss: 0.0073 - accuracy: 0.9983\n",
+            "Epoch 10/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0066 - accuracy: 0.9984\n",
+            "Epoch 11/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0063 - accuracy: 0.9985\n",
+            "Epoch 12/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0056 - accuracy: 0.9986\n",
+            "Epoch 13/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0054 - accuracy: 0.9988\n",
+            "Epoch 14/50\n",
+            "8322/8322 [==============================] - 57s 7ms/step - loss: 0.0048 - accuracy: 0.9988\n",
+            "Epoch 15/50\n",
+            "8322/8322 [==============================] - 57s 7ms/step - loss: 0.0047 - accuracy: 0.9989\n",
+            "Epoch 16/50\n",
+            "8322/8322 [==============================] - 57s 7ms/step - loss: 0.0047 - accuracy: 0.9989\n",
+            "Epoch 17/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0040 - accuracy: 0.9991\n",
+            "Epoch 18/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0040 - accuracy: 0.9991\n",
+            "Epoch 19/50\n",
+            "8322/8322 [==============================] - 57s 7ms/step - loss: 0.0040 - accuracy: 0.9991\n",
+            "Epoch 20/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0037 - accuracy: 0.9992\n",
+            "Epoch 21/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0031 - accuracy: 0.9993\n",
+            "Epoch 22/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0037 - accuracy: 0.9993\n",
+            "Epoch 23/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0031 - accuracy: 0.9993\n",
+            "Epoch 24/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0031 - accuracy: 0.9993\n",
+            "Epoch 25/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0030 - accuracy: 0.9993\n",
+            "Epoch 26/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0026 - accuracy: 0.9994\n",
+            "Epoch 27/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0030 - accuracy: 0.9994\n",
+            "Epoch 28/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0030 - accuracy: 0.9994\n",
+            "Epoch 29/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0025 - accuracy: 0.9994\n",
+            "Epoch 30/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0027 - accuracy: 0.9995\n",
+            "Epoch 31/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0026 - accuracy: 0.9995\n",
+            "Epoch 32/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0028 - accuracy: 0.9995\n",
+            "Epoch 33/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0029 - accuracy: 0.9994\n",
+            "Epoch 34/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0041 - accuracy: 0.9991\n",
+            "Epoch 35/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0022 - accuracy: 0.9995\n",
+            "Epoch 36/50\n",
+            "8322/8322 [==============================] - 61s 7ms/step - loss: 0.0021 - accuracy: 0.9995\n",
+            "Epoch 37/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0024 - accuracy: 0.9995\n",
+            "Epoch 38/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0023 - accuracy: 0.9996\n",
+            "Epoch 39/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0024 - accuracy: 0.9995\n",
+            "Epoch 40/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0018 - accuracy: 0.9996\n",
+            "Epoch 41/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0024 - accuracy: 0.9995\n",
+            "Epoch 42/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0024 - accuracy: 0.9996\n",
+            "Epoch 43/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0016 - accuracy: 0.9996\n",
+            "Epoch 44/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0027 - accuracy: 0.9996\n",
+            "Epoch 45/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0020 - accuracy: 0.9996\n",
+            "Epoch 46/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0030 - accuracy: 0.9994\n",
+            "Epoch 47/50\n",
+            "8322/8322 [==============================] - 61s 7ms/step - loss: 0.0030 - accuracy: 0.9996\n",
+            "Epoch 48/50\n",
+            "8322/8322 [==============================] - 60s 7ms/step - loss: 0.0021 - accuracy: 0.9996\n",
+            "Epoch 49/50\n",
+            "8322/8322 [==============================] - 59s 7ms/step - loss: 0.0023 - accuracy: 0.9995\n",
+            "Epoch 50/50\n",
+            "8322/8322 [==============================] - 58s 7ms/step - loss: 0.0022 - accuracy: 0.9996\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fcc35892050>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sQRdJa3Usnxk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83369a29-6e4a-4931-c8ef-ae617bcfb172"
+      },
+      "source": [
+        "loss, accuracy = model.evaluate(test_inputs, test_targets, verbose=1)\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "774/774 [==============================] - 2s 2ms/step - loss: 0.3582 - accuracy: 0.9719\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FCxvTAtcsnxk",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "outputId": "0a25de83-a78f-4bb1-bb25-1aadcb745ad6"
+      },
+      "source": [
+        "predictions = model.predict(test_inputs)\n",
+        "conf_matrix = tf.math.confusion_matrix(labels=test_targets,\n",
+        "                                       predictions=predictions).numpy()\n",
+        "print(\"------ Confusion Matrix Created ------\")\n",
+        "print()\n",
+        "print(conf_matrix)\n",
+        "print()\n",
+        "\n",
+        "precision = (conf_matrix[1][1]/(conf_matrix[1][1]+conf_matrix[0][1])).round(2)\n",
+        "recall = (conf_matrix[1][1]/(conf_matrix[1][1]+conf_matrix[1][0])).round(2)\n",
+        "f1Score = ((2 * precision * recall)/(precision + recall)).round(2)\n",
+        "statics = pd.DataFrame([[precision,recall,f1Score]],columns=[\"Precision\",\"Recall\",\"F1score\"])\n",
+        "statics"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "------ Confusion Matrix Created ------\n",
+            "\n",
+            "[[23624    56]\n",
+            " [  414   657]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Precision</th>\n",
+              "      <th>Recall</th>\n",
+              "      <th>F1score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.92</td>\n",
+              "      <td>0.61</td>\n",
+              "      <td>0.73</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Precision  Recall  F1score\n",
+              "0       0.92    0.61     0.73"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CUfCYwd4qfiL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
