Train SVM and Logistic Regression model with Balanced train Dataset + adding KNN to the first part

--- a/Fall_Detection_System.ipynb
+++ b/Fall_Detection_System.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Fall-Detection-System.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPW8oHhIEjfNdgv8w3DcJ0S",
+      "authorship_tag": "ABX9TyNv9FcNwo6wYhpeeHXfZ4uE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -714,7 +715,7 @@
         "id": "BWOuA-MKiOGS"
       },
       "source": [
-        "### SVM and Logistic Regression"
+        "#### SVM and Logistic Regression"
       ]
     },
     {
@@ -725,13 +726,14 @@
       "source": [
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.svm import LinearSVC\n",
         "x = train_inputs\n",
         "y = train_targets\n",
         "x_test = test_inputs\n",
         "y_test = test_targets"
       ],
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -883,7 +885,7 @@
         "id": "4psyZG_0inSI"
       },
       "source": [
-        "Svm Model Evaluation"
+        "SVM Model Evaluation"
       ]
     },
     {
@@ -928,6 +930,97 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q6fdau1J-E2k"
+      },
+      "source": [
+        "KNN implementation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VjpM0Dc1-A_r",
+        "outputId": "45b6c397-f583-4169-bd1e-d5c3b050b827"
+      },
+      "source": [
+        "knn = KNeighborsClassifier(n_neighbors=4)\n",
+        "knn.fit(x, y)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+              "                     metric_params=None, n_jobs=None, n_neighbors=4, p=2,\n",
+              "                     weights='uniform')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w9JCj7r8-H8z"
+      },
+      "source": [
+        "KNN evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6vTqXG5E-A_s",
+        "outputId": "376aa838-9cbd-4039-b784-c6cd89d68f09"
+      },
+      "source": [
+        "y_pred = knn.predict(x_test)\n",
+        "print(classification_report(y_test, y_pred))\n",
+        "print(confusion_matrix(y_test, y_pred))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.98      1.00      0.99     23680\n",
+            "           1       0.93      0.56      0.70      1071\n",
+            "\n",
+            "    accuracy                           0.98     24751\n",
+            "   macro avg       0.95      0.78      0.85     24751\n",
+            "weighted avg       0.98      0.98      0.98     24751\n",
+            "\n",
+            "[[23632    48]\n",
+            " [  466   605]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pSCxIger3fAy"
+      },
+      "source": [
+        "Balancing the Dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "uomYoggjsnxh",
@@ -956,6 +1049,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IOri445n3iMx"
+      },
+      "source": [
+        "Train the model with Balanced dataset"
       ]
     },
     {
@@ -1113,6 +1215,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UHad5CBL3mzQ"
+      },
+      "source": [
+        "Testing the model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sQRdJa3Usnxk",
@@ -1133,6 +1244,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gOKQgBa13ocy"
+      },
+      "source": [
+        "Evaluation of the model"
       ]
     },
     {
@@ -1222,15 +1342,233 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "CUfCYwd4qfiL"
+        "id": "dLEi0YD54kid"
       },
       "source": [
-        ""
+        "Balancing the train dataset for Svm and Logistic Regression Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CUfCYwd4qfiL",
+        "outputId": "13df5370-e360-4f26-f029-a791e6a9281c"
+      },
+      "source": [
+        "new_train_dataset = np.concatenate((train_inputs,train_targets.reshape((train_targets.shape[0],1))),axis=1)\n",
+        "df = pd.DataFrame(new_train_dataset, columns = None)\n",
+        "df.columns = [*df.columns[:-1], 'label']\n",
+        "reps = [128 if val == 1 else 1 for val in df.label]\n",
+        "df = df.loc[np.repeat(df.index.values, reps)].reset_index(drop=True)\n",
+        "Balanced_train = df.to_numpy()\n",
+        "print('Shape before Balancing :', new_train_dataset.shape)\n",
+        "print('Shape After Balancing:', Balanced_train.shape)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape before Balancing : (54543, 601)\n",
+            "Shape After Balancing: (379409, 601)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hlQKZ6E04uVs"
+      },
+      "source": [
+        "Logistic Regression After Balancing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rn9NuCk5V7EP",
+        "outputId": "0f9deefe-be52-48d4-df92-ec1711500664"
+      },
+      "source": [
+        "reg = LogisticRegression()\n",
+        "reg.fit(Balanced_train[:,:-1],Balanced_train[:,-1])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ujQVAxmO4zjU"
+      },
+      "source": [
+        "Logistic Regression Evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6lvoOIb-V7Ea",
+        "outputId": "0cb25153-8726-499a-8124-ca9d9e9ffe22"
+      },
+      "source": [
+        "print(\"score on test: \"  + str(reg.score(x_test, y_test)))\n",
+        "print(\"score on train: \" + str(reg.score(Balanced_train[:,:-1],Balanced_train[:,-1])))\n",
+        "y_pred = reg.predict(x_test)\n",
+        "print(classification_report(y_test, y_pred))\n",
+        "print(confusion_matrix(y_test, y_pred))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "score on test: 0.519696173891964\n",
+            "score on train: 0.9083838285333242\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.99      0.50      0.67     23680\n",
+            "           1       0.08      0.92      0.14      1071\n",
+            "\n",
+            "    accuracy                           0.52     24751\n",
+            "   macro avg       0.54      0.71      0.40     24751\n",
+            "weighted avg       0.95      0.52      0.64     24751\n",
+            "\n",
+            "[[11876 11804]\n",
+            " [   84   987]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OWTN6mcX45fG"
+      },
+      "source": [
+        "SVM After Balancing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5qeuyWYhV7Eb",
+        "outputId": "e47cbe10-7e93-4701-dd9e-a809a6ea7860"
+      },
+      "source": [
+        "svm=LinearSVC(C=0.0001)\n",
+        "svm.fit(Balanced_train[:,:-1],Balanced_train[:,-1])\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearSVC(C=0.0001, class_weight=None, dual=True, fit_intercept=True,\n",
+              "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+              "          multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+              "          verbose=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-d1eQYnz47Hz"
+      },
+      "source": [
+        "SVM Evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "opk3vCYBV7Ed",
+        "outputId": "27840a2c-6050-407a-ec58-4f9e6bf34044"
+      },
+      "source": [
+        "print(\"score on test: \" + str(svm.score(x_test, y_test)))\n",
+        "print(\"score on train: \"+ str(svm.score(Balanced_train[:,:-1], Balanced_train[:,-1])))\n",
+        "y_pred = svm.predict(x_test)\n",
+        "print(classification_report(y_test, y_pred))\n",
+        "print(confusion_matrix(y_test, y_pred))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "score on test: 0.32188598440467053\n",
+            "score on train: 0.8890326797730154\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      0.29      0.45     23680\n",
+            "           1       0.06      0.98      0.11      1071\n",
+            "\n",
+            "    accuracy                           0.32     24751\n",
+            "   macro avg       0.53      0.63      0.28     24751\n",
+            "weighted avg       0.96      0.32      0.44     24751\n",
+            "\n",
+            "[[ 6922 16758]\n",
+            " [   26  1045]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
